# chessthing

./: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  Enums.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  Positions.cpp  Positions.h  README.md  Structs.h  Textures.cpp  Textures.h  main.cpp  position.cpp  position.h
Agents/: Agent.h  RandomAgent.cpp  RandomAgent.h
Math/: Vector2.cpp  Vector2.h
NN/: arrayfiretesting.cpp
Pieces/: Piece.cpp  Piece.h
Utils/: Timer.cpp  Timer.h
x64/Debug/: OpenGL.exe.recipe  OpenGL.ilk  main.obj.enc  shaderloader.obj.enc  vc143.idb
x64/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
